Fix dark mode/light mode for temp user email

--- a/less/Vetrina.less
+++ b/less/Vetrina.less
@@ -11,7 +11,7 @@
 }
 
 .vetrina--new-purchase-temporary-user-email{
-  background: var(--vetrina-footer-background, @footer-background);
+  background: var(--vetrina-background, white);
 }
 
 .vetrina--new-purchase-bg-img{
